lib_LTLIBRARIES = libwhsql.la
library_includedir=$(includedir)/whiteHawk/mysql
library_include_HEADERS = *.hh

libwhsql_la_SOURCES = SQLError.cpp SQLErrorHandler.cpp SQLInstance.cpp SQLResult.cpp SQLServerSession.cpp SQLStream.cpp SQLResultRow.cpp SQLResultCol.cpp SQLQuery.cpp
libwhsql_la_LDFLAGS = -lmysqlclient 
