lib_LTLIBRARIES = libwhsystem.la
library_includedir=$(includedir)/whiteHawk/system
library_include_HEADERS = *.hh

libwhsystem_la_LDFLAGS = lpthread -ltar -lzzip -ldl
libwhsystem_la_SOURCES = AbstractFile.cpp DynamicLibrary.cpp FileInfo.cpp SystemPathCount.cpp SystemPath.cpp TarFile.cpp TarResource.cpp Thread.cpp Time.cpp ZipFile.cpp ZipResource.cpp
