lib_LTLIBRARIES = libwhutil.la
library_includedir=$(includedir)/whiteHawk/util
library_include_HEADERS = *.hh *.h

libwhutil_la_LDFLAGS = lpthread -ldl
libwhutil_la_SOURCES = AbstractFile.cpp DynamicLibrary.cpp FileInfo.cpp Inotifier.cpp SystemPathCount.cpp SystemPath.cpp Thread.cpp Time.cpp Exception.cpp
